refactor(bot): 重构BOT动作元数据扫描器为适配器模式
- 移除反射扫描BotActionService的方法，改用SDK的ProtocolCatalog作为数据源
- 新增NapCat协议相关依赖注入，直接获取动作描述符列表
- 重构toMetadata方法将协议描述符转换为动作元数据
- 简化类型处理逻辑，移除复杂的POJO字段平铺功能
- 删除BotActionService实现类及其大量手动映射方法
- 更新日志信息为动作目录加载完成提示
- 简化simpleType方法处理集合类型判断逻辑